WorkingCodeWithoutDeleteBook